# ipnet

./: .gitignore  CHANGELOG.md  README.md  ipnet.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  ci.yml.bak  macos.yml  pylint.yml  ubuntu-windows.yml
ipnet/: ipnet.py
ipnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: ipnet.py
src/ipnet/: ipnet.py
tests/: test_ipnet.py
